Ctrl+right click often selects the wrong vertex when done immediately after extruding #51100

Closed
opened 2017-03-31 21:56:18 +02:00 by Nathan Stoddard · 7 comments

System Information
Ubuntu, 64-bit, Nvidia graphics card (not sure of exact version)

Blender Version
2.78c

Short description of error
If you extrude a new vertex with ctrl+click or 'e', then ctrl+right click on another vertex (which should select the shortest path between the vertices), the wrong vertex will often be chosen as the end of the path.

Exact steps for others to reproduce the errorbug.blend
Open the attached .blend file, switch to edit mode, select only the top-left vertex, ctrl+click somewhere on the left to create a fifth vertex, ctrl+right click on the vertex on the bottom-left of the quad. This should select the shortest path from the new vertex to the bottom-left vertex, but instead it selects a path to the bottom-right vertex. This is reproducible every time, as long as nothing is done in between any of the steps.

**System Information** Ubuntu, 64-bit, Nvidia graphics card (not sure of exact version) **Blender Version** 2.78c **Short description of error** If you extrude a new vertex with ctrl+click or 'e', then ctrl+right click on another vertex (which should select the shortest path between the vertices), the wrong vertex will often be chosen as the end of the path. **Exact steps for others to reproduce the error**[bug.blend](https://archive.blender.org/developer/F530399/bug.blend) Open the attached .blend file, switch to edit mode, select only the top-left vertex, ctrl+click somewhere on the left to create a fifth vertex, ctrl+right click on the vertex on the bottom-left of the quad. This should select the shortest path from the new vertex to the bottom-left vertex, but instead it selects a path to the bottom-right vertex. This is reproducible every time, as long as nothing is done in between any of the steps.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @nstoddard

Added subscriber: @nstoddard

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

It's strange that any minimal change in 3DView, the bug is no longer reproducible.
@nstoddard, how to get to this situation from the default Cube?

@ideasman42, recently you worked on the selection code, it may not be related but... could you take a look?

It's strange that any minimal change in 3DView, the bug is no longer reproducible. @nstoddard, how to get to this situation from the default Cube? @ideasman42, recently you worked on the selection code, it may not be related but... could you take a look?

This is reproducible with every mesh I've tried, including the default cube.

This is reproducible with every mesh I've tried, including the default cube.
Campbell Barton was assigned by Aaron Carlisle 2017-04-15 21:53:59 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by d3f7b04f04

This issue was referenced by d3f7b04f041e37626652fe1c0ce14ce30e0a5b86
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51100
No description provided.