Fix T51100: Vertex pick fails after extrude